--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.library'
 
-def DEFAULT_COMPILE_SDK_VERSION             = 24
-def DEFAULT_BUILD_TOOLS_VERSION             = "25.0.2"
-def DEFAULT_TARGET_SDK_VERSION              = 22
+def DEFAULT_COMPILE_SDK_VERSION             = 27
+def DEFAULT_BUILD_TOOLS_VERSION             = "27.0.3"
+def DEFAULT_TARGET_SDK_VERSION              = 27
 def DEFAULT_GOOGLE_PLAY_SERVICES_VERSION    = "15.0.1"
 
 android {
@@ -27,6 +27,6 @@ dependencies {
     def googlePlayServicesVersion = project.hasProperty('googlePlayServicesVersion') ? project.googlePlayServicesVersion : DEFAULT_GOOGLE_PLAY_SERVICES_VERSION
 
     implementation  'com.facebook.react:react-native:+'
-    implementation  "com.google.android.gms:play-services-gcm:$googlePlayServicesVersion"
-    implementation  "com.google.android.gms:play-services-ads:$googlePlayServicesVersion"
+    api "com.google.android.gms:play-services-gcm:$googlePlayServicesVersion"
+    api "com.google.android.gms:play-services-ads:$googlePlayServicesVersion"
 }
